--- a/docker/snipeit/docker-compose.yml
+++ b/docker/snipeit/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: snipe_db
     restart: always
     volumes:
-      - db_data:/var/lib/mysql:Z
+      - /var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=
       - MYSQL_USER=snipe
@@ -18,7 +18,7 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - snipe_data:/config:Z
+      - /config
     environment:
       - APP_URL=< your application URL IE 192.168.10.1:8080>
       - MYSQL_PORT_3306_TCP_ADDR=mysql
