--- a/docker/snipeit/docker-compose.yml
+++ b/docker/snipeit/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - MYSQL_USER=snipe # a user to be created
       - MYSQL_PASSWORD= # that user's password
       - MYSQL_DATABASE=snipe # The database created for that user
+    networks:
+      default:
+        ipv4_address: 172.18.0.2
   snipeit: #snipe-it config
     image: linuxserver/snipe-it:latest
     container_name: snipe-it
@@ -21,7 +24,7 @@ services:
       - snipe-data:/config
     environment:
       - APP_URL= #< your application URL IE 192.168.10.1:8080>
-      - MYSQL_PORT_3306_TCP_ADDR=127.0.0.1
+      - MYSQL_PORT_3306_TCP_ADDR=172.18.0.2
       - MYSQL_PORT_3306_TCP_PORT=3306
       - MYSQL_DATABASE=snipe
       - MYSQL_USER=snipe
@@ -36,6 +39,6 @@ volumes: #make sure the volumes are created on docker-compose up
     external: false
  snipe-data:
     external: false
- network:
-     default:
-       driver: bridge
+network:
+  default:
+    driver: bridge
