--- a/docker/snipeit/docker-compose.yml
+++ b/docker/snipeit/docker-compose.yml
@@ -39,6 +39,6 @@ volumes: #make sure the volumes are created on docker-compose up
     external: false
  snipe-data:
     external: false
-network:
+networks:
   default:
     driver: bridge
