--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: minimal
 services:
   - docker
-script: for file in docker/*/*.yml; do docker-compose -f $file config -q; done
+script: for file in docker/*/*.yml; do docker-compose -f $file up --no-start; done
