--- a/docker/snipeit/docker-compose.yml
+++ b/docker/snipeit/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - snipe-db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD= #The root password
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes #Printed to STDOUT
       - MYSQL_USER=snipe # a user to be created
       - MYSQL_PASSWORD= # that user's password
       - MYSQL_DATABASE=snipe # The database created for that user
@@ -34,6 +34,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      default:
+        ipv4_address: 172.18.0.3
 volumes: #make sure the volumes are created on docker-compose up
  snipe-db:
     external: false
